[package]
name = "market_data"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = {version = "0.23", features = ["native-tls-vendored"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3.30"
url = "2.3"